--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ terraform/*.tfstate
 terraform/*.tfstate.*
 terraform/terraform.tfstate
 terraform/terraform.tfstate.backup
+
+# Node dependencies
+**/node_modules/
