Add Terraform infrastructure for ECS Fargate

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@ terraform/.terraform.lock.hcl
 **/.terraform/
 **/*.tfstate
 **/*.tfstate.*
+
+# Terraform
+**/.terraform/
+**/*.tfstate
+**/*.tfstate.*
+
+# Terraform
+**/.terraform/
+**/*.tfstate
+**/*.tfstate.*
