Fix YAML syntax - remove placeholder comments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,12 @@ on:
       - gitops
 
 env:
-  AWS_REGION: **us-east-2**  ← Your region
-  ECR_FRONTEND: **740838937919**.dkr.ecr.**us-east-2**.amazonaws.com/**devops-challenge-frontend**  ← Your account ID, region, and repo name
-  ECR_BACKEND: **740838937919**.dkr.ecr.**us-east-2**.amazonaws.com/**devops-challenge-backend**  ← Your account ID, region, and repo name
-  CLUSTER_NAME: **devops-challenge-cluster**  ← Your ECS cluster name
-  FRONTEND_SVC: **devops-challenge-frontend-service**  ← Your frontend service name
-  BACKEND_SVC: **devops-challenge-backend-service**  ← Your backend service name
+  AWS_REGION: us-east-2
+  ECR_FRONTEND: 740838937919.dkr.ecr.us-east-2.amazonaws.com/devops-challenge-frontend
+  ECR_BACKEND: 740838937919.dkr.ecr.us-east-2.amazonaws.com/devops-challenge-backend
+  CLUSTER_NAME: devops-challenge-cluster
+  FRONTEND_SVC: devops-challenge-frontend-service
+  BACKEND_SVC: devops-challenge-backend-service
 
 jobs:
   build-and-deploy:
@@ -38,19 +38,19 @@ jobs:
       - name: Build, tag, and push frontend image
         run: |
           docker build -t frontend:latest ./frontend
-          docker tag frontend:latest $ECR_FRONTEND:latest
-          docker push $ECR_FRONTEND:latest
+          docker tag frontend:latest ${{ env.ECR_FRONTEND }}:latest
+          docker push ${{ env.ECR_FRONTEND }}:latest
 
       - name: Build, tag, and push backend image
         run: |
           docker build -t backend:latest ./backend
-          docker tag backend:latest $ECR_BACKEND:latest
-          docker push $ECR_BACKEND:latest
+          docker tag backend:latest ${{ env.ECR_BACKEND }}:latest
+          docker push ${{ env.ECR_BACKEND }}:latest
 
       - name: Update ECS frontend service
         run: |
-          aws ecs update-service --cluster $CLUSTER_NAME --service $FRONTEND_SVC --force-new-deployment --region $AWS_REGION
+          aws ecs update-service --cluster ${{ env.CLUSTER_NAME }} --service ${{ env.FRONTEND_SVC }} --force-new-deployment --region ${{ env.AWS_REGION }}
 
       - name: Update ECS backend service
         run: |
-          aws ecs update-service --cluster $CLUSTER_NAME --service $BACKEND_SVC --force-new-deployment --region $AWS_REGION
+          aws ecs update-service --cluster ${{ env.CLUSTER_NAME }} --service ${{ env.BACKEND_SVC }} --force-new-deployment --region ${{ env.AWS_REGION }}
